--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </nav>
   </header>
   <main>
-    <section class="text-3xl p-16 bg-dashboard-img text-white text-shadow">
-      <h2 class="w-1/2 mb-2 text-balance">Therapist Mental Well-being <span class="font-bold">Matters</span></h2>
-      <p class="w-1/2 text-xs text-shadow">At <span class="font-bold">innerecho</span>, we are merging compassionate
+    <section class="text-3xl p-24 bg-dashboard-img text-white text-shadow">
+      <h2 class="w-1/2 mb-2 text-balance font-poppins">Therapist Mental Well-being <span class="font-bold">Matters</span></h2>
+      <p class="w-[30%] text-xs text-shadow">At <span class="font-bold">innerecho</span>, we are merging compassionate
         care with cutting-edge AI to empower mental health
         professionals.</p>
       <button class="text-xs py-3 px-9 border rounded border-gray-900 bg-white text-gray-950 mt-4">Learn more</button>
